src/test/ui/associated-types/cache/chrono-scan.stderr
error: compilation successful
  --> $DIR/chrono-scan.rs:39:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

